<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="categoria_usr"
        android:title="@string/usuario">
        <EditTextPreference
            android:dialogTitle="@string/seuNome"
            android:dialogMessage="@string/novoNome"
            android:inputType="textCapWords"
            android:key="key_nome_usr"
            android:title="@string/Nome"
            android:summary="#Nome Atual">
        </EditTextPreference>
        <EditTextPreference
            android:dialogTitle="@string/seuEmail"
            android:dialogMessage="@string/novoEmail"
            android:inputType="textEmailAddress"
            android:key="key_email_usr"
            android:title="@string/Email"
            android:summary="#Email Atual">
        </EditTextPreference>
        <EditTextPreference
            android:dialogTitle="@string/Telefone"
            android:dialogMessage="@string/novoTelefone"
            android:inputType="phone"
            android:key="key_telefone_usr"
            android:title="@string/Telefone"
            android:summary="#+55(44)9998-8877">
        </EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="categoria_notficacoes"
        android:title="@string/notificacoes">
        <SwitchPreference
            android:key="key_notificacoes_habilitar"
            android:editable="true"
            android:title="@string/ativarNotif">

        </SwitchPreference>
        <ListPreference
            android:dialogTitle="@string/tempoNotificacao"
            android:key="key_tempo_config"
            android:title="@string/tempoAntecedencia"
            android:summary="#1 hora"
            android:entries="@array/tempo_notif"
            android:entryValues="@array/tempo_notif_values">

        </ListPreference>

    </PreferenceCategory>
    <PreferenceCategory
        android:key="categoria_conta"
        android:title="@string/conta">
        <Preference
            android:title="@string/sair"
            android:key="key_sair_conta">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>